--- a/.github/workflows/test-keyring.yaml
+++ b/.github/workflows/test-keyring.yaml
@@ -22,8 +22,10 @@ jobs:
     outputs:
       session: ${{ steps.set-matrix.outputs.session }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: wntrblm/nox@main
+        with:
+          python-version: 3.11
       - id: set-matrix
         shell: bash
         run: echo session=$(nox --json -l | jq -c '[.[].session]') | tee --append $GITHUB_OUTPUT
@@ -37,6 +39,15 @@ jobs:
       matrix:
         session: ${{ fromJson(needs.generate-jobs.outputs.session) }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: wntrblm/nox@main
-      - run: nox -s "${{ matrix.session }}"
+      - uses: actions/checkout@v4
+
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v4
+        with:
+          python-version: "3.8 - 3.12"
+
+      - name: Install dependencies
+        run: pdm install
+
+      - name: Run "${{ matrix.session }}"
+        run: pdm run nox -s "${{ matrix.session }}"
