--- a/.github/workflows/test-keyring.yaml
+++ b/.github/workflows/test-keyring.yaml
@@ -23,9 +23,11 @@ jobs:
       session: ${{ steps.set-matrix.outputs.session }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: wntrblm/nox@main
         with:
-          python-version: 3.11
+          python-versions: "3.11"
+
       - id: set-matrix
         shell: bash
         run: echo session=$(nox --json -l | jq -c '[.[].session]') | tee --append $GITHUB_OUTPUT
@@ -41,13 +43,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: wntrblm/nox@main
+        with:
+          python-versions: "3.8, 3.9, 3.10, 3.11, 3.12, pypy-3.9, pypy-3.10"
+
       - name: Setup PDM
         uses: pdm-project/setup-pdm@v4
-        with:
-          python-version: "3.8 - 3.12"
 
       - name: Install dependencies
         run: pdm install
 
-      - name: Run "${{ matrix.session }}"
+      - name: Run ${{ matrix.session }}
         run: pdm run nox -s "${{ matrix.session }}"
