--- a/.github/workflows/test-keyring.yaml
+++ b/.github/workflows/test-keyring.yaml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup PDM
         uses: pdm-project/setup-pdm@v4
         with:
-          version: "^2.15.1"
+          version: "2.15.1"
           python-version-file: "src/artifacts-helper/codespaces_artifacts_helper_keyring/pyproject.toml"
 
       - name: Run ${{ matrix.session }}
